--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: 3.12
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Check links
         run: |
           pip install linkcheckmd
           python -m linkcheckmd docs -v
+          python -m linkcheckmd docs/about -v
+          python -m linkcheckmd docs/contributing -v
+          python -m linkcheckmd docs/get-started -v
       - name: Build
         run: mkdocs build
       - name: Setup Pages
